# audio_to_str

./: .gitignore  Dockerfile  OPTIMIZATION_SUGGESTIONS.md  README.md  app.py  audio_summary.md  docker-compose.yml  english_learning_summary.md  main.py  output_subtitles.srt  pyproject.toml  start.sh  test.md  test.srt  transcription_service.py
src/: __init__.py  app.py  main.py
src/config/: app_config.py  shared_state.py
src/models/: task.py
src/routes/: transcription.py
src/transcription_service/: __init__.py  core.py  exceptions.py  schemas.py  utils.py
src/utils/: file_utils.py  task_utils.py
